force-app/main/default/objects/Message__c/fields/Contact_mdr__c.field-meta.xml
<CustomField>
    <fullName>Contact_mdr__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>