force-app/main/default/objects/Message__c/fields/ContactEmail_f__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail_f__c</fullName>
    <formula>Contact_mdr__r.Email</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>