force-app/main/default/objects/Message__c/fields/ContactName_f__c.field-meta.xml
<CustomField>
    <fullName>ContactName_f__c</fullName>
    <formula>IF (ISBLANK(Contact_mdr__r.FirstName), &apos;&apos;, (Contact_mdr__r.FirstName + &apos; &apos;)) + Contact_mdr__r.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>