force-app/main/default/objects/Message__c/fields/Text_tal__c.field-meta.xml
<CustomField>
    <fullName>Text_tal__c</fullName>
    <label>Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>